--- a/css/output.css
+++ b/css/output.css
@@ -2059,6 +2059,9 @@
   .p-8 {
     padding: calc(var(--spacing) * 8);
   }
+  .p-9 {
+    padding: calc(var(--spacing) * 9);
+  }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
